<resources>
    <string name="app_name">Loan App</string>
    <string name="sign_in">Sign in</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="loan_duration">Loan Duration</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="apply_for_loan">Apply for loan</string>
    <string name="loan_application">Loan Application</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="update">Update</string>
    <string name="loan_status">Loan Status</string>
    <string name="data_uploading_complete">Data Uploading complete</string>
    <string name="image_uploading_complete">Image Uploading complete</string>
    <string name="uploading_data">Uploading Data</string>
    <string name="your_loan_application_has_been_submitted">Your Loan Application has been submitted</string>
    <string name="incoming">Incoming</string>
    <string name="rejected">Rejected</string>
    <string name="blocked">Blocked</string>
    <string name="outgoing">Outgoing</string>
    <string name="missed_call">Missed Call</string>
    <string name="no_loans_applied">No Loans Applied</string>
    <string name="image_uploading_started">Image Uploading Started</string>
    <string name="timeout_please_check_your_internet_connection">Timeout - Please check your internet connection</string>
    <string name="unable_to_make_a_connection_please_check_your_internet">Unable to make a connection. Please check your internet</string>
    <string name="connection_shutdown_please_check_your_internet">Connection shutdown. Please check your internet</string>
    <string name="server_is_unreachable_please_try_again_later">Server is unreachable, please try again later.</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="please_enter_a_valid_number">Please Enter A Valid Number</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="minimum_6_characters_are_required">Minimum 6 Characters are Required</string>
    <string name="upload_images">Upload Images</string>
    <string name="log_out">Log out</string>
    <string name="upload_user_data">Upload User Data</string>
    <string name="please_enter_loan_amount">Please Enter Loan Amount</string>
    <string name="please_enter_loan_duration">Please Enter Loan Duration</string>
    <string name="data_sync">Data Sync</string>
    <string name="data_uploading_service">Data Uploading Service</string>
</resources>